2019-03-11 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c:
	  Comparison fixes.
	* sim/ucsim/pdk.src/pdk.cc,
	  sdas/linksrc/lkmain.c:
	  Memory limit diagnostics, patch by Nicolas Lesser.
	* support/regression/tests/bug-2208.c,
	  support/regression/tests/bug-2253.c,
	  support/regression/tests/bug-2357.c,
	  support/regression/tests/bug-2516.c,
	  support/regression/tests/bug-2625.c:
	  Disable some tests for pdk14 (on which they won't work anytime soon due to lack of memory).

2019-03-11 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c,
	  src/SDCCglue.c:
	  Pointer handling fixes.
	* support/regression/tests/bp.c,
	  support/regression/tests/bug-1805702.c:
	  Disable some tests for pdk14 (on which they won't work anytime soon due to lack of memory).

2019-03-11 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/ralloc2.cc,
	  src/pdk/gen.c:
	  Improve register use.
	* sim/ucsim/pdk.src/inst.cc,
	  sim/ucsim/pdk.src/instcl.h:
	  Fix flag handling, patch by Nicolas Lesser.

2019-03-11 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c:
	  Fix arithmetic right shift, assembler issue workaround for variables in ROM.
	* src/pdk/ralloc2.cc:
	  Try to save abit more RAM.
	* support/regression/tests/and_survive.c,
	  support/regression/tests/ato.c,
	  support/regression/tests/bitopcse.c,
	  support/regression/tests/bug-2031.c,
	  support/regression/tests/bug-1953.c:
	  Disable some tests for pdk14 (on which they won't work anytime soon due to lack of memory).

2019-03-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c,
	  src/pdk/ralloc2.cc:
	  Improve register allocation, small code generation fixes.
	* support/regression/tests/absolute.c,
	  support/regression/tests/addsub.c,
	  support/regression/tests/args.c,
	  support/regression/tests/array.c,
	  support/regression/tests/bug-221100.c,
	  support/regression/tests/bug-221168.c,