@@ -6,9 +6,11 @@
 
 void testBug(void)
 {
+#ifndef __SDCC_pdk14 // Not enough RAM
   unsigned n = 5;
   volatile unsigned n2 = 5;
   volatile unsigned i = (unsigned) ( n / 2.5 );
   ASSERT(n2 / 2.5 == i);
+#endif
 }
 
