@@ -16,8 +16,10 @@ typedef struct
   unsigned long f;
 } struct_one;
 
+#ifndef __SDCC_pdk14 // Not enough RAM
 __xdata struct_one test;
 unsigned long sum;
+#endif
 
 unsigned long badd (__xdata struct_one *pointer)
 {
@@ -36,7 +38,9 @@ unsigned long add (__xdata struct_one *pointer)
 
 void testBug (void)
 {
+#ifndef __SDCC_pdk14 // Not enough RAM
   test.e = 0x01010101;
   test.f = 0x02020202;
   ASSERT (3UL == add(&test));
+#endif
 }
